dropdown header - dark mode. fixes #199

--- a/app/static/scss/_dark.scss
+++ b/app/static/scss/_dark.scss
@@ -27,6 +27,10 @@
     background-color: #D3D7CF;
   }
 
+  .dropdown-header {
+    color: white;
+  }
+
   .table td {
     border-top-color: #2D3848;
   }
