--- a/app/static/styles.scss
+++ b/app/static/styles.scss
@@ -490,4 +490,8 @@ div.navbar {
   }
 }
 
+[data-bs-theme="dark"] .dropdown-header {
+  color: white;
+}
+
 @import "scss/print";
